--- a/vue-demo/index.html
+++ b/vue-demo/index.html
@@ -7,16 +7,16 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
     <title>Vite App</title>
   </head>
   <body>
     <div id="app"></div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
-<!-- DB name -->
-<!-- DEMO_DB -->
-
-<!-- DB password -->
-<!-- P*4H99y$futgg@Q  -->
